automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -583,33 +583,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['Solta',\n",
-       " 'Greenville',\n",
-       " 'Buenos Aires',\n",
-       " 'Los Cabos',\n",
-       " 'Walla Walla Valley',\n",
-       " 'Marakesh',\n",
-       " 'Albuquerque',\n",
-       " 'Archipelago Sea',\n",
-       " 'Iguazu Falls',\n",
-       " 'Salina Island',\n",
-       " 'Toronto',\n",
-       " 'Pyeongchang']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-20-ea97c28f266e>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-ea97c28f266e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    top_travel_cities[0:1:2:3]\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
-    "top_travel_cities[0:1:]"
+    "top_travel_cities[0:1:2:3]"
    ]
   },
   {
